--- a/assets/usach-render.css
+++ b/assets/usach-render.css
@@ -310,7 +310,7 @@ templates/fondo01/* === COLORES INSTITUCIONALES === */
 /* ==========================================================
 Estructura general de slide
 ========================================================== */
-.reveal .backgrounds .slide-background-content {
+.reveal .slide-background-content {
     background: var(--usach-blanco) url('./templates/fondo01usach-fing.png')
                 no-repeat top center !important;
     background-size: cover !important;
