--- a/assets/usach-render.css
+++ b/assets/usach-render.css
@@ -578,6 +578,7 @@ pre {
 }
 
 
+/* Listas */
 .region__lista {
     margin-left: 1.5em;
     margin-bottom: 1em;
@@ -690,11 +691,17 @@ pre {
 
 /* Imágenes internas */
 .region__imagen {
+    width: 60%;
     max-width: 100%;
-    max-height: 70%;
     height: auto;
+    display: block;
+    margin: 1em auto;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
     object-fit: contain;
+    z-index: 40;
 }
+
 
 /* Ajuste especial para trio-arriba y trio-abajo */
 .slide-body--trio-horizontal-abajo .region__imagen,
