--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -512,7 +512,7 @@ Header / título de slide
     text-align: right;
 }
 
-.region--centrado {
+.region--centro {
     align-items: center;
     text-align: center;
 }
