--- a/assets/mode-dark/usach-render.css
+++ b/assets/mode-dark/usach-render.css
@@ -524,7 +524,7 @@ Header / título de slide
     text-align: right;
 }
 
-.region--centrado {
+.region--centro {
     align-items: center;
     text-align: center;
 }
